--- a/1_foundations/1_lab1.ipynb
+++ b/1_foundations/1_lab1.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Next it's time to load the API keys into environment variables\n",
     "# If this returns false, see the next cell!\n",
@@ -141,9 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OpenAI API Key exists and begins sk-proj-\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the key - if you're not using OpenAI, check whichever key you're using! Ollama doesn't need a key.\n",
     "\n",
@@ -159,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,9 +216,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 + 2 equals 4.\n"
+     ]
+    }
+   ],
    "source": [
     "# And now call it! Any problems, head to the troubleshooting guide\n",
     "# This uses GPT 4.1 nano, the incredibly cheap model\n",
@@ -216,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,9 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A bat and a ball cost $1.10 in total. The bat costs $1.00 more than the ball. How much does the ball cost?\n"
+     ]
+    }
+   ],
    "source": [
     "# ask it - this uses GPT 4.1 mini, still cheap but more powerful than nano\n",
     "\n",
@@ -246,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,9 +291,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's define:\n",
+      "\n",
+      "- Cost of the ball = \\( x \\)\n",
+      "- Cost of the bat = \\( x + 1.00 \\) (since the bat costs $1.00 more than the ball)\n",
+      "\n",
+      "The total cost is given as $1.10, so:\n",
+      "\n",
+      "\\[\n",
+      "x + (x + 1.00) = 1.10\n",
+      "\\]\n",
+      "\n",
+      "Simplify:\n",
+      "\n",
+      "\\[\n",
+      "2x + 1.00 = 1.10\n",
+      "\\]\n",
+      "\n",
+      "Subtract 1.00 from both sides:\n",
+      "\n",
+      "\\[\n",
+      "2x = 0.10\n",
+      "\\]\n",
+      "\n",
+      "Divide both sides by 2:\n",
+      "\n",
+      "\\[\n",
+      "x = 0.05\n",
+      "\\]\n",
+      "\n",
+      "**Answer:** The ball costs **5 cents ($0.05)**.\n"
+     ]
+    }
+   ],
    "source": [
     "# Ask it again\n",
     "\n",
@@ -273,9 +345,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Let's define:\n",
+       "\n",
+       "- Cost of the ball = \\( x \\)\n",
+       "- Cost of the bat = \\( x + 1.00 \\) (since the bat costs $1.00 more than the ball)\n",
+       "\n",
+       "The total cost is given as $1.10, so:\n",
+       "\n",
+       "\\[\n",
+       "x + (x + 1.00) = 1.10\n",
+       "\\]\n",
+       "\n",
+       "Simplify:\n",
+       "\n",
+       "\\[\n",
+       "2x + 1.00 = 1.10\n",
+       "\\]\n",
+       "\n",
+       "Subtract 1.00 from both sides:\n",
+       "\n",
+       "\\[\n",
+       "2x = 0.10\n",
+       "\\]\n",
+       "\n",
+       "Divide both sides by 2:\n",
+       "\n",
+       "\\[\n",
+       "x = 0.05\n",
+       "\\]\n",
+       "\n",
+       "**Answer:** The ball costs **5 cents ($0.05)**."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import Markdown, display\n",
     "\n",
@@ -318,23 +432,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# First create the messages:\n",
     "\n",
-    "messages = [{\"role\": \"user\", \"content\": \"Something here\"}]\n",
+    "from ssl import OP_ENABLE_MIDDLEBOX_COMPAT\n",
+    "\n",
+    "\n",
+    "messages = [{\"role\": \"user\", \"content\": \"Write a bussiness idea to imporve network performance\"}]\n",
     "\n",
     "# Then make the first call:\n",
     "\n",
-    "response =\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4.1-mini\",\n",
+    "    messages=messages\n",
+    ")\n",
     "\n",
     "# Then read the business idea:\n",
     "\n",
-    "business_idea = response.\n",
+    "business_idea = response.choices[0].message.content\n",
     "\n",
     "# And repeat! In the next message, include the business idea within the message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**Business Idea: AI-Driven Network Optimization Platform**\n",
+       "\n",
+       "**Overview:**  \n",
+       "Develop an AI-powered platform that continuously monitors, analyzes, and optimizes enterprise network performance in real-time. Using machine learning algorithms, the platform predicts congestion, detects anomalies, and automatically adjusts network configurations to enhance speed, reliability, and security.\n",
+       "\n",
+       "**Key Features:**  \n",
+       "- **Real-Time Monitoring:** Collect data from routers, switches, and endpoints across the network to gain comprehensive visibility.  \n",
+       "- **Predictive Analytics:** Use historical and real-time data to forecast traffic spikes and potential bottlenecks before they occur.  \n",
+       "- **Automated Optimization:** Dynamically allocate bandwidth, reroute traffic, and prioritize critical applications without manual intervention.  \n",
+       "- **Anomaly Detection & Security:** Identify unusual patterns indicating security threats or failures and trigger alerts or mitigation actions.  \n",
+       "- **User-Friendly Dashboard:** Provide IT teams with actionable insights, reports, and recommendations via an intuitive interface.  \n",
+       "- **Integration Capabilities:** Compatible with existing network equipment and software (e.g., SD-WAN, firewalls, cloud services).\n",
+       "\n",
+       "**Market Opportunity:**  \n",
+       "As organizations increasingly rely on cloud applications, IoT devices, and remote workforces, network demands grow more complex. Businesses face challenges like latency, downtime, and security risks. Your platform addresses these pain points by proactively maintaining optimal network conditions, reducing costs associated with manual troubleshooting and downtime.\n",
+       "\n",
+       "**Revenue Model:**  \n",
+       "- Subscription-based SaaS with tiered pricing based on number of devices or network size.  \n",
+       "- Professional services for customized deployment and ongoing support.  \n",
+       "- Potential upsell of advanced analytics or cybersecurity modules.\n",
+       "\n",
+       "**Why It’s Valuable:**  \n",
+       "Improving network performance ensures better user experience, higher productivity, and stronger security posture. By leveraging AI, this solution can transform reactive network management into a proactive, automated strategy—providing a competitive edge in the digital economy."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(Markdown(business_idea))"
    ]
   },
   {
@@ -359,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
